...
                    }
                }

                Button {
                    showingGlobalSettings = true
                } label: {
                    Label("Global Settings", systemImage: "gearshape.2")
                }
            } label: {
                Label("Settings", systemImage: "gearshape")
            }
        } label: {
            Label("More", systemImage: "ellipsis.circle")
                .labelStyle(.iconOnly)
        }
        .sheet(isPresented: $showingGameSettings) {
            if let gameRecord {
                NavigationStack {
                    GameSettingsView(gameRecord: gameRecord, maxBoardLength: maxBoardLength)
...
